# SmarticleSim

./: .gitignore  CMakeLists.txt  ChFunction_Controller.cpp  ChFunction_Controller.h  CheckPointSmarticles.cpp  CheckPointSmarticles.h  Controller.cpp  Controller.h  IrrGui.cpp  IrrGui.h  Smarticle.cpp  Smarticle.h  SmarticleGait.cpp  SmarticleU.cpp  SmarticleU.h  SmarticlesSystem.cpp  SmarticlesSystem_Dynamic.cpp  SystemGeometry.cpp  SystemGeometry.h  Test_SmarticlesSystem.cpp  common.cpp  common.h  icePar.cpp  remote-sync.sh
Genetic Algorithm/: testGA.py
LabVIEW/2DSmarticleBoxTilt/: ADXL345 Accelerometer Test.vi  ConvertToRollPitchYaw.vi  Create File with Incrementing Suffix.vi  GetAccelerometerData.vi  LowPassAccelData.vi  Main.vi  MainupdatedLibs2.vi  Rotate 3D object.vi  SetServoToPosition.vi  StartAccelerometer.vi  StartVideo.vi  TiltProject.aliases  TiltProject.lvlps  TiltProject.lvproj
LabVIEW/2DSmarticleBoxTilt/controls/: Data.ctl  State.ctl
bashScripts/: LinBash_ringSmarticle.sh  SCRemoveBucket.txt  Shake.sh  VibRemoveBucket.txt  ballVary.sh  bash_ringSmarticle.sh  em.sh  hookStickVary.sh  linuxRun.sh  linuxRun2.sh  lwRun.sh  r.bat  sendemail.ps1  smarticleMoves.csv  vibVary.sh  winRun-BoxAng.sh  winRun.sh
cmake/: FindChronoEngine.cmake  SBELUtils.cmake
howtorun/: SCFrac.txt  SCRemoveBucket.txt  StaticFill.txt  VibFrac.txt  VibRemoveBucket.txt  readme.txt  runSim.ps1  runSystem_v1.bat  runSystem_v2.bat  sendemail.ps1  smarticleMoves.csv  test.ps1
matlabScripts/: 0.3Evo20s.fig  0.3UShape.mat  1.0UShape20160126.mat  1.0UShapeZeroRotation20160127.mat  GenerateSmarticleCsv.asv  GenerateSmarticleCsv.m  GetFileInfo.m  MSDSimAmoeba.m  NormalForce0.3log.fig  NormalForce1.0.fig  PID_control.m  PlotBoxShapeChangeWithLazy.m  PlotPercentageAtDirectedPosition.m  Put2VidsTogether.m  Vexsphere.m  check.m  errBarCalc.asv  errBarCalc.m  fitStretched.m  fiterr2.m  getFileDate.m  getShapeLines.m  interiorAreaOfSmarticle.m  interpolateGait.m  loglinefit.m  logslopeline.m  modelling servos.one  msd.m  paperFigReproduce.m  phivsangle.m  plotAngleConfigSpace.m  plotAngleHistogram.m  plotAnglePhaseSpace.m  plotFlowRate.m  plotMeanMovement.m  plotPhifvlwSmarticles.asv  plotPhifvlwSmarticles.m  plotSmarticleCOMHeight.m  plotStress.m  plotphivsangle.m  (+22 more)
matlabScripts/amoeba/: createWavFile.m  dvsfric.m  ffmpeg streams  multiMSD.m  plotTrackingOverAmoeba.m  plotTrackingOverSimAmoeba.m  smartSoundGUI.fig  smartSoundGUI.m  smarticleSingleMSD.m  smarticleSound.m  test.m  trackFolderMovies.m  trackFolderOptitrack.m  trackMovie.m  trackOptitrack.m
matlabScripts/newSimScripts/: PlotSimData.m  RemoveSmartsFromBucket.m  calcSphericity.m  changeInPhiAmp.m  findChangesInGui.m  generatePackingFromSimDatPLANE.m  generatePackingFromSimDatPLANE.prj  generatePackingFromSimDatPLANE_mex.mexw64  generatePackingFromSimDatVOL.m  getAllSmartPoints.m  intersectionHull.m  plotBallPos.m  readBallPosDat.m  readSimData.m  readSimParams.m  readVolFracShakeSim.m  saveFolderN.m  singleRunSmartPoints.m  testSpd.m  tt.m
matlabScripts/newSimScripts/codegen/lib/generatePackingFromSimDatPLANE/: bsxfun.cpp  bsxfun.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  createPlane.cpp  createPlane.h  crossProduct3d.cpp  crossProduct3d.h  distancePointEdge3d.cpp  distancePointEdge3d.h  dot.cpp  dot.h  gcGuiReport.mat  generatePackingFromSimDatPLANE.cpp  generatePackingFromSimDatPLANE.h  generatePackingFromSimDatPLANE_data.cpp  generatePackingFromSimDatPLANE_data.h  generatePackingFromSimDatPLANE_emxAPI.cpp  generatePackingFromSimDatPLANE_emxAPI.h  generatePackingFromSimDatPLANE_emxutil.cpp  generatePackingFromSimDatPLANE_emxutil.h  generatePackingFromSimDatPLANE_initialize.cpp  generatePackingFromSimDatPLANE_initialize.h  generatePackingFromSimDatPLANE_rtw.bat  generatePackingFromSimDatPLANE_rtw.mk  generatePackingFromSimDatPLANE_rtw.rsp  generatePackingFromSimDatPLANE_terminate.cpp  generatePackingFromSimDatPLANE_terminate.h  generatePackingFromSimDatPLANE_types.h  inpolygon.cpp  inpolygon.h  intersectRayPolygon3d.cpp  intersectRayPolygon3d.h  normalizeVector3d.cpp  normalizeVector3d.h  pdist.cpp  pdist.h  polygonArea.cpp  polygonArea.h  (+18 more)
matlabScripts/newSimScripts/codegen/lib/generatePackingFromSimDatPLANE/examples/: main.cpp  main.h
matlabScripts/newSimScripts/codegen/lib/generatePackingFromSimDatPLANE/html/: report.mldatx
matlabScripts/newSimScripts/codegen/lib/generatePackingFromSimDatPLANE/interface/: _coder_generatePackingFromSimDatPLANE_api.c  _coder_generatePackingFromSimDatPLANE_api.h  _coder_generatePackingFromSimDatPLANE_info.c  _coder_generatePackingFromSimDatPLANE_info.h  _coder_generatePackingFromSimDatPLANE_mex.cpp  _coder_generatePackingFromSimDatPLANE_mex.h
matlabScripts/newSimScripts/codegen/mex/generatePackingFromSimDatPLANE/: cfiGuiReport.mat
matlabScripts/newSimScripts/codegen/mex/generatePackingFromSimDatPLANE/html/: report.mldatx
pythonrunscripts/: .gitignore  bash_Smarticle.sh  run.bat  simRunPars phi vs ang all lw=1.txt  simRunPars phi_fvslw.txt  simRunPars.txt  smarticle_run.py  smarticle_run2.py  smarticle_run3.py  smarticle_runServer.py  smarticle_runwrong.py  smarticles.csv
rendering/: render_chrono.pov
